<resources>
    <string name="app_name">Расход Топлива на 100 км</string>
    <string name="instructions">Инструкции</string>
    <string name="counting">расчет</string>
    <string name="cena_litra_topliva">Цена литра топлива, тенге/лт:</string>
    <string name="zafiksirovannyj_probeg">Зафиксированный пробег перед использованием авто с полным баком, км:</string>
    <string name="poslednij_probeg">Последний пробег, км:</string>
    <string name="itogo_projdennoe_rasstoyanie">Сколько километров вы проехали:</string>
    <string name="oplacheno_za_polnyj_bak">Оплачено за полный бак, тенге:</string>
    <string name="zalito_benzina_v_bak">Расход топлива:</string>
    <string name="rasxod_benzina_na_100_km">Расход топлива на 100 км:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poschitat">нажмите чтобы посчитать</string>
    <string name="zapolnite_iacheiki">Заполните ячейки:</string>
    <string name="rezultati">Результаты:</string>
    <string name="tenge">тенге</string>
    <string name="km">км</string>
    <string name="tenge_lt">тенге/лт</string>
    <string name="InstructionsText1">РАСЧЕТ РАСХОДА ТОПЛИВА НА 100 КМ ПО АЛГОРИТМУ</string>
    <string name="InstructionsText2">1. Для начала залейте полный бак топливом и зафиксируйте пробег автомобиля до его последующего использования.</string>
    <string name="InstructionsText3">2. После этого эксплуатируйте автомобиль. Затем необходимо снова зафиксировать пробег.</string>
    <string name="InstructionsText4">3. Итак, у вас есть два числа: пробег, зафиксированный перед использованием автомобиля с полным баком, и последний пробег. Вычтите из второго числа первое. Разность показывает, сколько километров вы проехали.</string>
    <string name="InstructionsText5">4. Вспомните, какая стоимость вышла когда заливали в бак, чтобы посчитать количество бензина.</string>
    <string name="InstructionsText6">5. Теперь у вас есть все данные, чтобы подставить их в формулу, имеющую следующий вид: V/S х 100.</string>
    <string name="InstructionsText7">S – количество километров. V – количество бензина, которое вы истратили. Результат деления километров на литры умножается на 100, чтобы получить число, показывающее, какое количество бензина понадобится вашему автомобилю, чтобы проехать 100 км.</string>
</resources>
